@@ -1,3 +1,9 @@
+2006-01-20  Ville Vainio  <vivainio@gmail.com>
+
+	* Ipython/Extensions/rehash_dir.py: Created a usable example
+	of how to extend ipython with new magics. Also added Extensions
+	dir to pythonpath to make executing extensions easy.
+
 2006-01-20  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/iplib.py (raw_input): I _think_ I got the pasting of
